--- a/html.html
+++ b/html.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Strona</title>
 </head>
 <body>
     <div class="elo">
-        Hejo lalalala fg
+        
     </div>
 </body>
 </html>
