--- a/html.html
+++ b/html.html
@@ -7,11 +7,10 @@
     <title>Strona</title>
 </head>
 <body>
-    <div class="elo">
+    <div class="header">
         
     </div>
     
-   <a> walić polskie Rapsy</a>
+   
 </body>
 </html>
-git
