--- a/html.html
+++ b/html.html
@@ -9,9 +9,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-   ala asduassahda<h1>1</h1>
-   ala2
+   <h1>Witamy!</h1>
+   
 </body>
-Jest!
+
 <a>test</a>
 </html>
