--- a/html.html
+++ b/html.html
@@ -11,9 +11,7 @@
 </head>
 <body>
    <h1>Witamy!</h1>
-    <div class="code-container">
-        <div id="matrix-code"></div>
-    </div>
-    <script src="anime.js"></script>
+    <canvas id="matrix"></canvas>
+   <script src="anime.js"></script>
 </body>
 </html>
