--- a/html.html
+++ b/html.html
@@ -9,7 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body bgcolor= "#008000">
+<body bgcolor= #008000>
    <h1>Witamy!</h1>
     <canvas id="matrix"></canvas>
    <script src="anime.js"></script>
