--- a/html.html
+++ b/html.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery-2.2.3.js"></script>
+    <script src="js/bootstrap.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Matrix</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <title>Stronka Czaja Krzysztof</title>
 </head>
+
 <body>
-   <h1>Witamy!</h1>
-    <canvas id="matrix"></canvas>
-   <script src="anime.js"></script>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="#main" class="navbar-brand">Strona główna</a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#news">Aktualności</a></li>
+                    <li><a href="#about">O programie</a></li>
+                    <li><a href="#contact">Kontakt</a></li>
+                </ul>
+                <p class="nav navbar-text navbar-right">Użytkownik: Janek Wasilewski</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="jumbotron">
+
+            <h1>Strona Aplikacje</h1>
+            <p>Fajna zabawa</p>
+            <button type="button" class="btn btn-danger"><a href="http://ezn.edu.pl/">EZN &raquo</a></button>
+        </div>
+
+        <div class="footer">
+            <h1>Stopka</h1>
+        </div>
 </body>
+
 </html>
