--- a/html.html
+++ b/html.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/jquery-2.2.3.js"></script>
     <script src="js/bootstrap.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GR: Czaja, Lisiewicz, Jaroszewski</title>
+    <title>Stronka Czaja Krzysztof</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                     <li><a href="#about">O programie</a></li>
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
-                <p class="nav navbar-text navbar-right">Użytkownik</p>
+                <p class="nav navbar-text navbar-right">Użytkownik: Janek Wasilewski</p>
             </div>
         </div>
     </div>
@@ -39,6 +39,7 @@
         <div class="jumbotron">
 
             <h1>Strona Aplikacje</h1>
+            <p>Fajna zabawa</p>
             <button type="button" class="btn btn-danger"><a href="http://ezn.edu.pl/">EZN &raquo</a></button>
         </div>
 
