--- a/html.html
+++ b/html.html
@@ -10,7 +10,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stronka Czaja Krzysztof</title>
+    <title>GR Czaja, Lisiewicz, Jaroszewski</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                     <li><a href="#about">O programie</a></li>
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
-                <p class="nav navbar-text navbar-right">Użytkownik: Janek Wasilewski</p>
+                <p class="nav navbar-text navbar-right">Użytkownik: </p>
             </div>
         </div>
     </div>
