--- a/html.html
+++ b/html.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="footer">
-            <h1>Stopka</h1>
+            <h1>Stopka :)</h1>
         </div>
 </body>
 
