--- a/html.html
+++ b/html.html
@@ -28,7 +28,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#news">Aktualności</a></li>
                     <li><a href="#about">O programie</a></li>
-                    <li><a href="#contact">Kontakty bla bla</a></li>
+                    <li><a href="#contact">Kontakty</a></li>
                 </ul>
                 <p class="nav navbar-text navbar-right">Użytkownik:</p>
             </div>
@@ -47,5 +47,5 @@
             <h1>Stopka :)</h1>
         </div>
 </body>
-    hejo
+    
 </html>
